Fix overflow issue on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -476,6 +476,7 @@ a {
 
 .testimonial {
   padding: 3rem;
+  overflow: visible;
 }
 
 .testimonial__image {
@@ -491,10 +492,6 @@ a {
   top: 3rem;
   right: -32px;
 }
-
-/* .testimonial .card {
-  overflow: visible; Find a solution for the cut out. 
-} */
 
 @media screen and (min-width: 768px) {
   .testimonial .quote,
